Add missing TaskScheduler on tests using RendereWidgetHostImpl

RenderWidgetHostImpl constructor requires an instance of TaskScheduler
on Windows. Its absence causes DCHECK failure or null ptr access
failure only on Windows, which is hard to find for non-windows devs.

This CL adds a DCHECK to detect it on non-Windows build, so that we
notice the failure earlier, and also fixes the failure detected by
the DCHECK.

BUG=696919
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_site_isolation

Review-Url: https://codereview.chromium.org/2785883004
Cr-Commit-Position: refs/heads/master@{#461134}

Former-commit-id: 5d6c4a51e01d9f6d37e24b1964bb482421808b73